Fix overflow issues from my code toot

--- a/public/dave/css/index.css
+++ b/public/dave/css/index.css
@@ -216,6 +216,7 @@ html {
 
 #recap-container > * {
 	width: 100%;
+	max-width: 384px; /* based on width of recap container and margins in grid */
 }
 
 /* https://www.a11yproject.com/posts/how-to-hide-content/ */
@@ -291,6 +292,7 @@ pre:not([class*="language-"]) {
 	white-space: pre;
 	word-spacing: normal;
 	word-break: normal;
+	overflow: auto;
 }
 code {
 	word-break: break-all;
